<resources>
    <string name="app_name">udm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_device_list">Device List</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_other_2">Other</string>
    <string name="menu_setting">Setting</string>

    <!-- 参数设置界面元素变量定义 -->
    <string name="tab_name_ip_setting">IP Setting</string>
    <string name="tab_name_connect_setting">Connection Setting</string>

    <string name="tab_name_tcp">TCP</string>
    <string name="tab_name_udp">UDP</string>

    <string name="label_chnl">Channel</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--IP SETTING TAG-->

    <string name="tag_eth_auto_obtain_ip">eth_auto_obtain_ip</string>
    <string name="tag_preferred_dns_server">preferred_dns_server</string>
    <string name="tag_alternate_dns_server">alternate_dns_server</string>
    <string name="tag_basic_web_console">basic_web_console</string>
    <string name="tag_basic_rtc_time">basic_rtc_time</string>
    <string name="tag_eth_ip_addr">eth_ip_addr</string>
    <string name="tag_eth_netmask_addr">eth_netmask_addr</string>
    <string name="tag_eth_gateway_addr">eth_gateway_addr</string>
    <string name="tag_basic_telnet_console">basic_telnet_console</string>
    <string name="tag_basic_cloud_console">basic_cloud_console</string>
    <string name="tag_basic_cmd_tcp_console">basic_cmd_tcp_console</string>
    <string name="tag_basic_timer_server">basic_timer_server</string>
    <!-- Connection setting-->
    <string name="tag_conn_net_protocol">conn_net_protocol</string>
    <string name="tag_conn_tcp_conn_response">conn_tcp_conn_response</string>
    <string name="tag_conn_tcp_host_ip0">conn_tcp_host_ip0</string>
    <string name="tag_uart_stopbit">uart_stopbit</string>
    <string name="tag_uart_flowrntrl">uart_flowrntrl</string>
    <string name="tag_uart_idle_time_packing">uart_idle_time_packing</string>
    <string name="tag_conn_tcp_work_mode">conn_tcp_work_mode</string>
    <string name="tag_conn_tcp_host_port0">conn_tcp_host_port0</string>
    <string name="tag_conn_tcp_local_port">conn_tcp_local_port</string>
    <string name="tag_uart_databit">uart_databit</string>
    <string name="tag_uart_bdrate">uart_bdrate</string>
    <string name="tag_uart_parity">uart_parity</string>
    <string name="tag_conn_link_latch_timeout">conn_link_latch_timeout</string>
    <string name="tag_conn_udp_data_mode">conn_udp_data_mode</string>
    <string name="tag_conn_udp_tmp_host_en">conn_udp_tmp_host_en</string>
    <string name="tag_conn_udp_uni_host_ip0">conn_udp_uni_host_ip0</string>
    <string name="tag_conn_udp_mul_remote_ip">conn_udp_mul_remote_ip</string>
    <string name="tag_conn_udp_acception">conn_udp_acception</string>
    <string name="tag_conn_udp_uni_local_port">conn_udp_uni_local_port</string>
    <string name="tag_conn_udp_uni_host_port0">conn_udp_uni_host_port0</string>
    <string name="tag_conn_udp_mul_local_port">conn_udp_mul_local_port</string>
    <string name="tag_conn_udp_mul_remote_port">conn_udp_mul_remote_port</string>
    <string name="tag_uart_work_mode">uart_work_mode</string>
    <string name="tag_conn_uart_out_ifg">conn_uart_out_ifg</string>
    <string name="tag_conn_merge_timeout">conn_merge_timeout</string>
    <string-array name="conn_protocol">
        <item>TCP</item>
        <item>UDP</item>
    </string-array>
</resources>
