<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SerialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/top_title_nav" />
        <ScrollView
            android:id="@+id/v_gesture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:background="@color/udm_base_bgcolor">

            <GridLayout
                android:id="@+id/v_gesture1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="6"
                android:horizontalSpacing="5sp"
                android:focusableInTouchMode="true"
                android:numColumns="auto_fit"
                android:orientation="horizontal"
                android:stretchMode="columnWidth"
                android:theme="@style/theme_param_setting"
                android:background="@android:color/white"
                android:verticalSpacing="25sp">

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Protocol" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_serial_protocol"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:tag="@string/tag_uart_work_mode" />

                <View
                    android:id="@+id/v_gesture2"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Baud Rate" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_uart_bdrate"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:tag="@string/tag_uart_bdrate" />

                <View
                    android:id="@+id/v_gesture3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Data Bits" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_uart_databit"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:tag="@string/tag_uart_databit" />

                <View
                    android:id="@+id/v_gesture4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Stop Bits" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_uart_stopbit"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:tag="@string/tag_uart_stopbit" />

                <View
                    android:id="@+id/v_gesture5"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Flow Control" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_uart_flowrnt"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:tag="@string/tag_uart_flowrntrl" />

                <View
                    android:id="@+id/v_gesture6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Parity" />

                <com.ibamb.udm.tag.UdmSpinner
                    android:id="@+id/udm_uart_parity"
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:tag="@string/tag_uart_parity" />

                <View
                    android:id="@+id/v_gesture7"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:background="@color/udm_base_bgcolor" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Uart ldle Time(ms)" />

                <com.ibamb.udm.tag.UdmButtonTextEdit
                    android:id="@+id/udm_uart_idle_time_packingr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:columnCount="3"
                    android:tag="@string/tag_uart_idle_time_packing" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Uart Out IFG(ms)" />

                <com.ibamb.udm.tag.UdmButtonTextEdit
                    android:id="@+id/udm_conn_uart_out_ifg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:columnCount="3"
                    android:tag="@string/tag_conn_merge_timeout" />

                <TextView
                    android:layout_columnSpan="3"
                    android:layout_gravity="fill"
                    android:layout_marginLeft="2sp"
                    android:layout_marginRight="2sp"
                    android:gravity="left|center"
                    android:text="Link Latch(ms)" />

                <com.ibamb.udm.tag.UdmButtonTextEdit
                    android:id="@+id/udm_conn_link_latch_timeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:columnCount="3"
                    android:tag="@string/tag_conn_link_latch_timeout" />
            </GridLayout>
        </ScrollView>
        <View
            android:id="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="fill"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>